<resources>
    <string name="app_name">Katch up</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="new_user_text">New user Can Sign Up here</string>
    <string name="title_activity_landing">Landing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_booking">My Booking</string>
    <string name="logout">Logout</string>

    <!--Register-->
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="name">Name</string>
    <string name="re_password">Re-enter Password</string>
    <string name="contact">Contact</string>
    <string name="loading">loadiing</string>
    <string name="user_id">User Id</string>
    <string name="previous">Previous Step</string>

    <string name="event_category">Event Category</string>
    <string name="event_type">Event Type</string>
    <string name="premium_type">Premium Type</string>
    <string name="approval_message">Our team is verifying and posting your event, It might take time upto 12 hours. Sit back and relax!</string>

    <string-array name="event_type_entries">
        <item>Event Type</item>
        <item>Normal</item>
        <item>Premium</item>
    </string-array>


    <string-array name="event_category_entries">
        <item>Event Category</item>
        <item>Party</item>
        <item>Play</item>
        <item>Music Concert</item>
        <item>Book Description</item>
        <item>Marathon</item>
        <item>Sports</item>
        <item>Trekking</item>
        <item>Conference</item>
        <item>Workshop</item>
    </string-array>

    <string-array name="event_preimum_type_entries">
        <item>Premium Type</item>
        <item>Bronze - 40€</item>
        <item>Silver - 60€</item>
        <item>Gold - 80€</item>
    </string-array>

    <string-array name="event_preimum_type_entries1">
        <item>Premium Type</item>
        <item>Notifications - 40€</item>
        <item>Ads + Notifications - 60€</item>
        <item>Sponsorships + Ads + Notifications - 80€</item>
    </string-array>

</resources>
