<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_name"
        android:layout_width="281dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/primaryColor"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/grey" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="281dp"
        android:layout_height="55dp"
        android:layout_below="@+id/et_name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/primaryColor"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/grey" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_contact"
        android:layout_width="281dp"
        android:layout_height="55dp"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/primaryColor"
        android:ems="10"
        android:hint="@string/contact"
        android:inputType="number"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/grey" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="281dp"
        android:layout_height="55dp"
        android:layout_below="@id/et_contact"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/primaryColor"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/grey" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_re_password"
        android:layout_width="281dp"
        android:layout_height="55dp"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/primaryColor"
        android:ems="10"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/grey" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/sipnner_location"
        android:layout_width="281dp"
        android:layout_height="55dp"
        android:layout_below="@id/et_re_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/primaryColor"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/grey"
        app:hintText="location" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@color/primary"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/white" />

</RelativeLayout>